--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             },
             {
                 question: "What is a significant impact of saltwater intrusion on Maryland's Eastern Shore?",
-                options: ["Increased fish populations", "Damage to agricultural fields", "Increased storm water flooding", "Lower property values"],
+                options: ["Increased fish populations", "Damage to agricultural fields", "Increased storm water flooding", "Lower insurance premiums"],
                 answer: "Damage to agricultural fields"
             },
             {
