--- a/CoastalRelienceQuiz.HTML
+++ b/CoastalRelienceQuiz.HTML
@@ -198,7 +198,7 @@
             },
             {
                 question: "What is a significant impact of saltwater intrusion on Maryland's Eastern Shore?",
-                options: ["Increased fish populations", "Damage to agricultural fields", "Cleaner drinking water", "Higher property values"],
+                options: ["Increased fish populations", "Damage to agricultural fields", "Increased storm water flooding", "Lower Insurance Premiums"],
                 answer: "Damage to agricultural fields"
             },
             {
